Изменен swagger и очень много исправлений
